--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
 	<section class="promo">
 		<div class="container">
 			<header class="header">
@@ -24,7 +25,7 @@
 				<div class="header__contacts">
 					<a href="tel:+74999228974
 					" class="header__phone">+7 (499) 922-89-74</a>
-					<button class="button">заказать звонок</button>
+					<button data-modal="consultation" class="button">заказать звонок</button>
 				</div>
 			</header>
 
@@ -45,7 +46,7 @@
 						Ответим на все вопросы
 					</div>
 				</div>
-				<button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+				<button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
 				<div class="promo__link">
 					или
 					<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -92,6 +93,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="consultation">
 		<div class="container">
 			<h2 class="consultation__title">Получите бесплатную консультацию<br>по подбору пульсометра </h2>
@@ -407,6 +409,55 @@
 		</div>
 
 	</section>
+
+	<footer class="footer">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4068530993777!2d37.644431806669026!3d55.76880538520857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1621175364180!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		<div class="footer__info">
+			<address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+			<a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="#" class="footer__social-item"><img src="icons/fb.png" alt="facebook"></a>
+				<a href="#" class="footer__social-item"><img src="icons/instagram.png" alt="instagram"></a>
+				<a href="#" class="footer__social-item"><img src="icons/pinterest.png" alt="pinterest"></a>
+			</div>
+		</div>
+	</footer>
+
+	<div class="overlay">
+		<div class="modal" id="consultation">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Просто заполните форму заявки</div>
+			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+			<form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+
+				<button class="button button_submit">Заказать консультацию</button>
+			</form>
+		</div>
+		
+		<div class="modal" id="order">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Ваш заказ:</div>
+			<div class="modal__descr">Пульсометр Polar FT1</div>
+			<form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+
+				<button class="button button_submit">Купить</button>
+			</form>
+		</div>
+
+		<div class="modal" id="thanks">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Спасибо за вашу заявку!</div>
+			<div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+		</div>
+	</div>
+
+
 
 
 
