--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 
-	<section class="promo">
+	<section id="up" class="promo">
 		<div class="container">
 			<header class="header">
 				<a href="#" class="header__logo">
@@ -69,7 +70,7 @@
 					</div>
 				</div>
 				<div class="advantages__icon">
-					<img src="icons/heart.png" alt="heart">
+					<img src="icons/heart.png" alt="heart" class="advantages__heart advantages__heart_animated">
 					<div class="advantages__title">
 						Заботимся о здоровье
 					</div>
@@ -101,10 +102,10 @@
 				Просто заполните форму заявки<br>
 				и мы перезвоним вам в течении 10 минут
 			</div>
-			<form class="feed-form" action="#">
-				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваш телефон" type="number">
-				<input name="email" required placeholder="Ваш E-mail" type="email">
+			<form id="consultation-form" class="feed-form" action="#">
+				<input name="name"  placeholder="Ваше имя" type="text">
+				<input name="phone" placeholder="Ваш телефон">
+				<input name="email" placeholder="Ваш E-mail" type="email">
 
 				<button class="button button_submit">Заказать консультацию</button>
 			</form>
@@ -373,7 +374,7 @@
 		<div class="container">
 			<h2 class="reviews__title">отзывы клиентов</h2>
 			<div class="reviews__wrapper">
-				<div class="reviews__person">
+				<div class="reviews__person fadeInUp wow data-wow-duration="2s" data-wow-delay="1s""">
 					<img src="img/reviews/1.png" alt="Irina" class="reviews__img">
 					<div class="reviews__descr">
 						<div class="reviews__name">Ирина Иванченко</div>
@@ -383,7 +384,7 @@
 					</div>
 				</div>
 				<hr>
-				<div class="reviews__person">
+				<div class="reviews__person fadeInUp wow data-wow-duration="2s" data-wow-delay="1s""">
 					<img src="img/reviews/2.png" alt="Ivan" class="reviews__img">
 					<div class="reviews__descr">
 						<div class="reviews__name">Иван Сёмочкин</div>
@@ -395,7 +396,7 @@
 					</div>
 				</div>
 				<hr>
-				<div class="reviews__person">
+				<div class="reviews__person fadeInUp wow data-wow-duration="2s" data-wow-delay="1s""">
 					<img src="img/reviews/3.png" alt="Julia" class="reviews__img">
 					<div class="reviews__descr">
 						<div class="reviews__name">Юлия Дашкина</div>
@@ -430,21 +431,21 @@
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form class="feed-form feed-form_mt25" action="#">
 				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="phone" required placeholder="Ваш телефон">
 				<input name="email" required placeholder="Ваш E-mail" type="email">
 
 				<button class="button button_submit">Заказать консультацию</button>
 			</form>
 		</div>
-		
+
 		<div class="modal" id="order">
 			<div class="modal__close">&times;</div>
 			<div class="modal__subtitle">Ваш заказ:</div>
 			<div class="modal__descr">Пульсометр Polar FT1</div>
 			<form class="feed-form feed-form_mt25" action="#">
-				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваш телефон" type="number">
-				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<input name="name" placeholder="Ваше имя" type="text">
+				<input name="phone" placeholder="Ваш телефон">
+				<input name="email" placeholder="Ваш E-mail" type="email">
 
 				<button class="button button_submit">Купить</button>
 			</form>
@@ -457,13 +458,16 @@
 		</div>
 	</div>
 
-
-
-
+	<a href="#up"class="pageup">
+		<img src="icons/up.svg" alt="up">
+	</a>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
+	<script src="js/jquery.validate.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
